community-modules/core/src/styles/ag-grid.scss
/* ... */
.ag-layout-print {
    .ag-body-horizontal-scroll {
        display: none;
    }
}

.ag-force-vertical-scroll {
    overflow-y: scroll;

    &.ag-layout-print {
        overflow-y: visible;
    }
}

.ag-horizontal-left-spacer, .ag-horizontal-right-spacer {
    height: 100%;
    min-width: 0;
    overflow-x: scroll;
    &.ag-scroller-corner {
        overflow-x: hidden;
    }
}

/**
 ****************************
 * Headers
 ****************************
*/
.ag-header, .ag-pinned-left-header, .ag-pinned-right-header {
    display: inline-block;
    overflow: hidden;
}

.ag-header-cell-sortable {
    cursor: pointer;
}

.ag-header {
    display: flex;
    width: 100%;
    white-space: nowrap;
}

.ag-pinned-left-header {
    height: 100%;
}

.ag-pinned-right-header {
    height: 100%;
}

.ag-header-row {
    position: absolute;
    overflow: hidden; // so when floating filters are height 0px, the contents don't spill out
}

.ag-header-cell {
    display: inline-flex;
    align-items: center;
    position: absolute;
    height: 100%;
}

.ag-header-group-cell-label, .ag-header-cell-label {
    display: flex;
    flex: 1 1 auto;
    overflow: hidden;
    align-items: center;
    text-overflow: ellipsis;
    align-self: stretch;
}

.ag-header-cell-text {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.ag-numeric-header .ag-header-cell-label {
    flex-direction: row-reverse;
}

.ag-header-group-text {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.ag-header-cell-resize {
    position: absolute;
    z-index: 2;
    height: 100%;
    width: 8px;
    top: 0;

    cursor: ew-resize;

    // unpinned headers get their rezise handle on the right in normal mode and left in RTL mode
    @include ag-unthemed-rtl((
        right: -4px
    ));
}

.ag-pinned-left-header .ag-header-cell-resize {
    right: -4px; // pinned left headers always have their resize on the right, even in RTL mode
}

.ag-pinned-right-header .ag-header-cell-resize {
    left: -4px; // pinned right headers always have their resize on the left, even in RTL mode
}

.ag-header-select-all {
    display: flex;
}

/**
 ****************************
 * Columns
 ****************************
*/
.ag-column-moving {
    .ag-cell {
        transition: left 0.2s;
    }

    .ag-header-cell {
        transition: left 0.2s;
    }

    .ag-header-group-cell {
        transition: left 0.2s, width 0.2s;
    }
}

/**
 ****************************
 * Column Panel
 ****************************
*/

.ag-column-panel {
    display: flex;
    flex-direction: column;
    overflow: hidden;
    flex: 1 1 auto;
}

.ag-column-select {
    display: flex;
    flex-direction: column;
    overflow: hidden;
    flex-grow: 3;
    flex-shrink: 1;
    flex-basis: 0;
}

.ag-column-select-header {
    display: flex;
    flex: none;
}

.ag-column-select-header-filter-wrapper {
    flex: 1 1 auto;
}

.ag-column-select-header-filter {
    width: 100%;
}

.ag-column-select-list {
    flex: 1 1 auto;
    overflow: auto;
}

.ag-column-drop {
    display: inline-flex;
    align-items: center;
    overflow: auto;
    width: 100%;
}

.ag-column-drop-list {
    display: flex;
    align-items: center;
}

.ag-column-drop-cell {
    display: flex;
    align-items: center;
}

.ag-column-drop-cell-text {
    overflow: hidden;
    flex: 1 1 auto;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.ag-column-drop-vertical {
    display: flex;
    flex-direction: column;
    overflow: hidden;
    flex: 1 1 0;
    align-items: stretch;
}

.ag-column-drop-vertical-title-bar {
    display: flex;
    align-items: center;
}

.ag-column-drop-vertical-list {
    align-items: stretch;
    flex-grow: 1;
    flex-direction: column;
    overflow-x: auto;

    > * {
        flex: none;
    }
}

.ag-column-drop-empty .ag-column-drop-vertical-list {
    overflow: hidden;
}

.ag-column-drop-vertical-empty-message {
    display: block;
}

.ag-column-drop.ag-column-drop-horizontal {
    white-space: nowrap;
    overflow: hidden;
}

.ag-column-drop-cell-button {
    cursor: pointer;
}

.ag-filter-toolpanel {
    flex: 1;
}

.ag-filter-toolpanel-header, .ag-filter-toolpanel-search {
    display: flex;
    align-items: center;

    > * {
        display: flex;
        align-items: center;
    }
}

/**
 ****************************
 * Rows
 ****************************
*/
// for animations, allows rows to slide up and down,
.ag-row-animation .ag-row {
    transition: transform 0.4s, top 0.4s, height 0.4s, background-color 0.1s, opacity 0.2s;
}

.ag-row-no-animation .ag-row {
    transition: background-color 0.1s;
}

.ag-row {
    white-space: nowrap;
    width: 100%;
}

.ag-row-position-absolute {
    position: absolute;
}

.ag-row-position-relative {
    position: relative;
}

.ag-full-width-row {
    overflow: hidden;
    // turn events back on, as we removed them in the parent
    pointer-events: all;
}

.ag-row-inline-editing {
    z-index: 1;
}

.ag-row-dragging {
    z-index: 2;
}

.ag-stub-cell {
    display: flex;
    align-items: center;
}

/**
 ****************************
 * Cells
 ****************************
*/
.ag-cell {
    display: inline-block;
    position: absolute;
    white-space: nowrap;
}

.ag-cell-value, .ag-group-value {
    overflow: hidden;
    text-overflow: ellipsis;
}

.ag-cell-wrapper {
    display: flex;
    align-items: center;
    width: 100%;
    height: 100%;
    overflow: hidden;
    &.ag-row-group {
        align-items: flex-start;
    }
}

.ag-full-width-row .ag-cell-wrapper.ag-row-group {
    align-items: center;
}

.ag-cell-auto-height {
    height: 100%;
}

.ag-cell-inline-editing {
    z-index: 1;
    .ag-cell-edit-wrapper, 
    .ag-cell-editor,
    .ag-cell-editor .ag-wrapper,
    .ag-cell-editor input {
        height: 100%;
        width: 100%;
        line-height: normal;
    }
}

.ag-cell .ag-icon {
    display: inline-block;
    vertical-align: middle;
}
/* ... */

